fix navbar alignment issue, improve scrollbar and hr

--- a/ice-client/src/App.css
+++ b/ice-client/src/App.css
@@ -1,9 +1,9 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-image: url('./images/background.svg');
+  background-image: url("./images/background.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -45,4 +45,36 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.wrapper {
+  display: flex;
+}
+
+.child1 {
+  flex: 1;
+}
+
+.child2 {
+  flex: 8;
+  display: flex;
+  justify-content: center;
+}
+
+.child3 {
+  flex: 1;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid rgba(255, 255, 255, 40%);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0);
 }
